--- a/app/client/style.css
+++ b/app/client/style.css
@@ -3,29 +3,27 @@
 
 /* Set up some CSS variables to theme the application. */
 :root {
-  --matr-navbar-bg: #ECECEC;
-  --matr-navbar-bg-rgb: 236, 236, 236;
+  --navbar-text: white;
 }
 
 /* Change bootstrap variable values.
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
 body {
-  --bs-light-rgb: var(--matr-navbar-bg-rgb);
 }
 
-/* Set the alert background on the signin and signup pages. */
-/*#signin-page .alert-light, #signup-page .alert-light {*/
-/*  --bs-alert-bg: var(--matr-navbar-bg);*/
-/*}*/
+.white-text {
+  color: white !important;
+}
 
-/* Define custom styles */
-/*.gray-background {*/
-/*  background-color: var(--matr-navbar-bg);*/
-/*  color: var(--bs-dark);*/
-/*  padding-top: 10px;*/
-/*  padding-bottom: 20px;*/
-/*}*/
+navbar-nav .nav-item.dropdown .dropdown-menu .dropdown-item {
+  color: #ffffff !important; /* Set the text color for the dropdown items */
+  /* Add other styles for dropdown items as needed */
+}
+
+.navbar {
+  background-color: #024731;
+}
 
 #signup-page {
  background-color: #B4A7D7;
